# LXPaint

./: .dockerignore  .gitignore  2w  CMakeLists.txt  README.md  ]  bootstrap.sh  build.sh  dev-install.sh  docker-compose.yml  imgui.ini  install.sh  makefile  mspaint  requirements.md  test-distros.sh
Documentation/: Architecture.md  Audit.md  Command_System.md  Rendering.md  Roadmap.md  Viewport.md
include/: Canvas.h
src/: App.cpp  App.h  Canvas.cpp  Globals.h  InputDispatcher.cpp  MSpaint  canvas.cpp  canvas.h  command.h  globals.h  main.cpp
src/App/: App.cpp  App.h  Globals.h  ToolSettings.h  Utils.h  Window.cpp  Window.h  main.cpp
src/Commands/: Command.h  CommandManager.h  DrawCommand.h
src/Core/: AssetManager.cpp  AssetManager.h  Canvas.cpp  Canvas.h  CommandManager.h  Logger.h  Profiler.h  Renderer.cpp  Renderer.h
src/Document/: Canvas.cpp  Canvas.h  PreviewLayer.cpp  PreviewLayer.h  RenderTarget.cpp  RenderTarget.h
src/Editor/: Editor.cpp  Editor.h  EditorDocument.cpp  EditorDocument.h  ToolSettings.h
src/Editor/Commands/: Command.h  CommandManager.h  DrawCommand.h  DrawStrokeCommand.h  SnapshotCommand.h
src/Editor/Interaction/: ToolContext.h  ToolInteractionState.h
src/Editor/Preview/: PreviewLayer.cpp  PreviewLayer.h
src/Editor/Tools/: AirBrush.cpp  AirBrush.h  BaseTool.h  Brush.cpp  Brush.h  Circle.cpp  Circle.h  ClickTool.h  CurveLine.cpp  CurveLine.h  Eraser.cpp  Eraser.h  EyeDropper.cpp  EyeDropper.h  FloodFill.cpp  FloodFill.h  GeometricTool.h  Lasso.cpp  Lasso.h  Line.cpp  Line.h  Magnifier.cpp  Magnifier.h  Pencil.cpp  Pencil.h  Polygon.cpp  Polygon.h  Rect.cpp  Rect.h  RectSelection.cpp  RectSelection.h  RoundedRect.cpp  RoundedRect.h  SelectionTool.cpp  SelectionTool.h  StrokeTool.h  Text.cpp  Text.h  ToolManager.h
src/Editor/Viewport/: Viewport.cpp  Viewport.h
src/IO/: ImageIO.cpp  ImageIO.h
src/Input/: InputDispatcher.cpp  InputDispatcher.h
src/Preview/: PreviewSystem.cpp  PreviewSystem.h
src/Renderer/: Rasterizer.cpp  Rasterizer.h
src/Rendering/: Rasterizer.cpp  Rasterizer.h  RenderTarget.cpp  RenderTarget.h  Renderer.cpp  Renderer.h  Transform2D.h
src/Systems/: Assert.h  Logger.h  Profiler.h
src/Tools/: BaseTool.h  Eraser.cpp  Eraser.h  FloodFill.cpp  FloodFill.h  Line.cpp  Line.h  LineCommand.h  Pencil.cpp  Pencil.h  PencilCommand.h  Rect.cpp  Rect.h  ToolManager.h
src/UI/: BorderRenderer.h  ColorPalette.cpp  ColorPalette.h  ColorPallete.cpp  ColorPallete.h  Console.h  Footer.cpp  Footer.h  FooterMessages.h  HoverStatus.h  RetroWindow.h  Ribbon.cpp  Ribbon.h  Theme.cpp  Theme.h  ToolOption.cpp  ToolOption.h  Toolbar.cpp  Toolbar.h  UI.h
src/UI/Actions/: MenuActionDispatcher.cpp  MenuActionDispatcher.h  MenuActions.h
src/UI/Components/: ToolSettingsPanel.h  UIComponents.h
src/UI/Dialogs/: AppDialogs.h  Dialog.h  DialogControl.h  DialogManager.h  DialogTheme.h
src/UI/Dropdown/: Dropdown.cpp  Dropdown.h  MenuItems.h
src/UI/Layout/: UILayout.h
src/UI/LayoutEngine/: DropdownMetrics.h  LayoutEngine.cpp  LayoutEngine.h  LayoutMetrics.h  UILayoutConstant.h
src/UI/Styling/: UIDrawHelper.h  UIStyle.h
src/UI/TopRibbon/: TopRibbon.cpp  TopRibbon.h
src/commands/: DrawCommand.h
src/core/: Canvas.h  Command.h  CommandManager.h  Logger.h  Profiler.h
src/renderer/: quad.cpp  quad.h  shader.cpp  shader.h
